# MCP-SERVER-PYTHON

./: .gitignore  GITHUB_SETUP.md  README.md  llms-full.md
mcp-demo-s3table-qry/: README.md  pyproject.toml
mcp-demo-s3table-qry/aws_s3table_query/: __init__.py  config.yaml  server.py  test_server.py
